# itero

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  INSTALL_USING_AGENT.md  LICENSE  Makefile  README.md  ROADMAP.md  STEP_BY_STEP.md  pyproject.toml
.examples/: full-pipeline.yml  instructions.md  simple-dev-tester.yml
.itero/: full-pipeline.yml  workflows.yml
src/itero/: __init__.py  cli.py
src/itero/adapters/: fs.py
src/itero/adapters/agents/: __init__.py  custom_command.py
src/itero/adapters/loaders/: __init__.py  yaml_workflow_loader.py
src/itero/application/: agent_factory.py  condition_evaluator.py  prompt_renderer.py
src/itero/application/commands/: __init__.py  list_workflows.py  run_workflow.py
src/itero/application/handlers/: __init__.py  list_workflows_handler.py  run_workflow_handler.py
src/itero/domain/: __init__.py  agent_executor.py  ports.py  run_context.py  workflow.py
tests/: conftest.py  test_cli.py  test_condition_evaluator.py  test_custom_command_agent.py  test_list_workflows_handler.py  test_prompt_renderer.py  test_run_workflow_handler.py  test_yaml_loader.py
tests/integration/: test_full_pipeline_flow.py  test_workflow_integration.py
